--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -133,53 +133,50 @@
                         </div>
                         <div style="padding-top:30px;">
                             <h3>Donation information</h3>
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                              </div>
-                              <button type="submit" class="btn btn-primary">Submit</button>
+                            <div class="address-block">
+                                <div class="form-group" style="padding: 0px;">
+                                    <label for="firstLocation">Payment Method</label>
+                                    <select class="form-control">
+                                        <option value="" selected disabled>Select Your Option</option>
+                                        <option>Bkash</option>
+                                        <option>Rocket</option>
+                                        <option>Nagad</option>
+                                    </select>
+                                    <small>How do you want to receive your money?</small>
+                                </div>
+                                <div class="form-group" style="padding-top: 0px;">
+                                    <label for="exampleInputEmail1">Phone Number</label>
+                                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your phone number">
+                                    <small>What is your payment number?</small>
+
+                                </div>
+                                <div class="form-group" style="padding-top: 0px;">
+                                    <label for="exampleInputEmail1">Campaign Deadline</label>
+                                    <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                    <small>When you want to stop this campaign?</small>
+                                </div>
+                            </div>
                         </div>
-                      </form>
                 </div>
                 <div class="step" onclick="navigateToStep(2)">
-                    <a class="step-header">
-                        <span class="btn btn-circle" id="st2-circle">
-                            2
-                        </span>
-                        <div class="step-title">
-                            Fundraiser Story
-                        </div>
-                    </a>
                     <div class="text">
-                        Tell your story! Add your description, images, videos and more
+                       
                     </div>
                 </div>
                 <div class="step" onclick="navigateToStep(3)">
-                    <a class="step-header">
-                        <span class="btn btn-circle" id="st3-circle">
-                            3
-                        </span>
-                        <div class="step-title">
-                            Final Details
-                        </div>
-                    </a>
                     <div class="text">
-                        Add team members, customize visibility, and more
+                        
                     </div>
                 </div>
                 <div class="step" onclick="navigateToStep(4)">
-                    <a class="step-header">
-                        <span class="btn btn-circle" id="st4-circle">
-                            4
-                        </span>
-                        <div class="step-title">
-                            Payment Methods
-                        </div>
-                    </a>
+
                     <div class="text">
-                        Enable payment processors for your fundraising page
+                        
                     </div>
+                
+
                 </div>
+            </form>
             </div>
         </div>
     </div>
