--- a/AmarDaan/static/css/style.css
+++ b/AmarDaan/static/css/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Bai Jamjuree', sans-serif;
 }
+
   .container-fluid {
     width: 100%;
   }
@@ -506,5 +507,162 @@ box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 transition: all 250ms ease-in-out 0s;
 
 }
+.containers{
+  width: 100%;
+  display: flex;
+}
+/* H */
+.product_card__block {
+  width: 80%;
+  margin: 100px auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
 
+.product_card__content {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 8px 11px 13px 10px rgba(0, 0, 0, 0.07);
+  width: calc(350px - 40px);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 30px 40px;
+  margin-top: 150px;
+  color: black;
+  animation: cardAppear 0.5s forwards;
+  opacity: 0;
+  transition: 0.2s;
+}
 
+.product_card__img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  position: absolute;
+  top: -100px;
+  transition: 0.2s;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.product_card__title {
+  margin: 80px 0 5px 0;
+  font-size: 20px;
+}
+
+.product_card__description {
+  text-align: center;
+  margin: 5px 0 5px 0;
+  color: #7a7777;
+  font-size: 12px;
+}
+
+.product_card__price {
+  margin-top: 2px;
+  font-weight: bold;
+}
+
+.product_card__btn {
+  padding: 15px 30px;
+  background-color: #7C5CFC;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.2s;
+}
+
+.product_card__btn:active {
+  transform: scale(0.8);
+
+}
+
+.product_card__content:hover .product_card__img {
+  transform: translateY(-20px) scale(1.1);
+}
+
+.product_card__content:hover {
+  background-color: #7C5CFC;
+  color: black;
+}
+
+.product_card__content:hover .product_card__btn {
+  background-color: #ffffff;
+  color: #00396b;
+  cursor: pointer;
+}
+
+.product_card__content:hover .product_card__description {
+  color: black;
+}
+
+@media (max-width: 769px) {
+  .product_card__block {
+    width: 100%;
+  }
+
+  .product_card__content {
+    width: calc(70% - 40px);
+    margin-top: 200px;
+  }
+}
+
+@keyframes cardAppear {
+  0% {
+    -webkit-transform: translateY(-50px);
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.delay-1 {
+  animation-delay: 0.1s;
+}
+
+.delay-2 {
+  animation-delay: 0.2s;
+}
+
+.delay-3 {
+  animation-delay: 0.3s;
+}
+
+.delay-4 {
+  animation-delay: 0.4s;
+}
+
+.delay-5 {
+  animation-delay: 0.5s;
+}
+
+.delay-6 {
+  animation-delay: 0.6s;
+}
+
+.delay-7 {
+  animation-delay: 0.7s;
+}
+
+.delay-8 {
+  animation-delay: 0.8s;
+}
+
+.delay-9 {
+  animation-delay: 0.9s;
+}
+
+.delay-10 {
+  animation-delay: 1s;
+}
