--- a/amardaan/static/css/otp.css
+++ b/amardaan/static/css/otp.css
@@ -1,17 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 *{
-    font-family: 'Bai Jamjuree', sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 .height-100 {
-    height: 100vh
+    height: 100vh;
 }
 
 .card {
-    width: 400px;
+    width: 450px;
     border: none;
     border-radius: 10px;
-    height: 350px;
-    box-shadow: 0px 5px 20px 0px #d2dae3;
+    height: 50%;
+    box-shadow: 0px 0px 10px #ffffff,
+    0px 0px 5px #ceced1;
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -19,13 +20,13 @@
 }
 
 .card h6 {
-    color: red;
-    font-size: 20px
+    color: #7C5CFC;
+    font-size: 20px;
 }
 
 .inputs input {
     width: 40px;
-    height: 40px
+    height: 40px;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -48,22 +49,29 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .card-2 .content {
-    margin-top: 50px
+    margin-top: 50px;
 }
 
 .card-2 .content a {
-    color: red
+    color: red;
 }
 
 .form-control:focus {
     box-shadow: none;
-    border: 2px solid red
+    border: 2px solid red;
 }
 
 .validate {
-    border-radius: 20px;
+    border-radius: 10px;
     height: 40px;
-    background-color: red;
-    border: 1px solid red;
-    width: 140px
+    background-color: #7C5CFC;
+    border: 1px solid #7C5CFC;
+    width: 140px;
+    margin: 20px;
+    box-shadow: 0px 0px 10px #ffffff,
+    0px 0px 5px #ceced1;
+}
+.validate:hover{
+    background-color: #2908aa;
+    border: 1px solid #2908aa;
 }
