--- a/amardaan/templates/otp_page.html
+++ b/amardaan/templates/otp_page.html
@@ -12,6 +12,7 @@
     <div class="position-relative">
         <div class="card p-2 text-center">
             <img style="width: 150px;margin: 20px" src="{{url_for('static', filename='images/logo.png')}}">
+            <img src="../static/images/otp.avif" style="width: 200px">
             <h6>Please enter the one time password <br> to verify your account</h6>
             <div>
                 <span>A code has been sent to</span>
@@ -26,7 +27,7 @@
               <input class="m-2 text-center form-control rounded" type="text" name="fifth" id="fifth" maxlength="1" /> 
               <input class="m-2 text-center form-control rounded" type="text" name="sixth" id="sixth" maxlength="1" /> 
             </div>
-            <div class="mt-4"> <button type="submit" class="btn btn-danger px-4 validate">Validate</button> </div>
+            <div > <button type="submit" class="btn btn-danger px-4 validate">Validate</button> </div>
           </form>
         </div>
     </div>
